--- a/.eslintrc
+++ b/.eslintrc
@@ -23,16 +23,20 @@
     ]
   },
   "plugins": [
-    "react"
+    "react",
+    "@typescript-eslint",
+    "prettier"
   ],
   "extends": [
     "eslint:recommended",
     "plugin:@typescript-eslint/eslint-recommended",
-    "plugin:@typescript-eslint/recommended"
+    "plugin:@typescript-eslint/recommended",
+    "prettier"
   ],
   "rules": {
     "react/jsx-uses-react": "error",
     "react/jsx-uses-vars": "error",
+    "prettier/prettier": 2,
     "no-console": 0
   }
 }
