--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.16",
+    "@types/redux-mock-store": "^1.0.2",
     "@types/underscore": "^1.10.21",
     "@typescript-eslint/eslint-plugin": "^2.10.0",
     "@typescript-eslint/parser": "^2.10.0",
@@ -61,6 +62,7 @@
     "react-konva": "^16.13.0-5",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
+    "redux-mock-store": "^1.5.4",
     "resolve": "1.15.0",
     "resolve-url-loader": "3.1.1",
     "sass-loader": "8.0.2",
@@ -71,6 +73,7 @@
     "typescript": "~3.7.2",
     "underscore": "^1.10.2",
     "url-loader": "2.3.0",
+    "use-image": "^1.0.7",
     "webpack": "4.42.0",
     "webpack-dev-server": "3.11.0",
     "webpack-manifest-plugin": "2.2.0",
